cdbs (0.4.50) UNRELEASED; urgency=low

  * Made qmake class observe nostrip option (qmake.mk) (closes: #438417)
  * Call make as $(MAKE) (qmake.mk)
  * Added cmake class (original patch by Fathi Boudra) (closes: #377524)
  * Documented cases where setting DEB_DESTDIR manually could be necessary
    (closes: #438372)

 -- Peter Eisentraut <petere@debian.org>  Mon, 13 Aug 2007 19:10:56 +0200

cdbs (0.4.49) unstable; urgency=low

  * cdbs-edit-patch:
    - Test directory after checking for help message (closes: #389503)
    - Support patches ending in .diff (closes: #389508)
    - Ensure exit status 0 in case of success (closes: #389929)
    - Apply patches in an order consistent with simple-patchsys.mk
      (closes: #395180)
    [from Martin Pitt:] (closes: #381120)
    - Now works for packages using tarball.mk (closes: #399308)
    - Can edit patches that produce rejections
    - Strips off "debian/patches/" from patch name argument to comfortably
      work with command line completion
  * Added XS-Vcs- fields
  * Added build dependency on texlive-extra-utils to pull in epstopdf
    (closes: #420329)
  * Fixed typos (hbuild.mk) (closes: #419322)
  * Corrected documentation about how to override configure flags
    (closes: #420198)
  * Shortened uploaders list
  * Do not unapply patches when building from a tarball (tarball.mk)
    (closes: #424080)
  * Normalized spelling of makefile errors and warnings (autotools-files.mk,
    buildcore.mk, dpatch.mk, perlmodule.mk, python-distutils.mk,
    simple-patchsys.mk, tarball.mk)

 -- Peter Eisentraut <petere@debian.org>  Sun, 20 May 2007 18:01:14 +0200

cdbs (0.4.48) unstable; urgency=medium

  * Reverse patches before cleaning build directory (simple-patchsys.mk)
    (closes: #387103)
  * Drop build dependency on python2.3; use python2.5 in the testsuite
    instead (closes: #403358)

 -- Peter Eisentraut <petere@debian.org>  Sat, 16 Dec 2006 18:25:48 +0100

cdbs (0.4.47) unstable; urgency=low
