@@ -5,6 +5,8 @@ cdbs (0.4.50) UNRELEASED; urgency=low
   * Added cmake class (original patch by Fathi Boudra) (closes: #377524)
   * Documented cases where setting DEB_DESTDIR manually could be necessary
     (closes: #438372)
+  * Use unversioned interpreter for default Python version
+    (python-distutils.mk) (closes: #377964)
 
  -- Peter Eisentraut <petere@debian.org>  Mon, 13 Aug 2007 19:10:56 +0200
 
